# gpyrn

./: LICENSE  Makefile  pyproject.toml  requirements.txt
gpyrn/: _plots.py  meanfield.py
