[tool.poetry]
name = "gpyrn"
version = "1.0.1"
description = "Gaussian process regression networks for exoplanet detection"
authors = ["João Camacho <joao.camacho@astro.up.pt>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "gpyrn" }]

[tool.poetry.dependencies]
python = "^3.12.5"
ipython = "^9.12.0"
matplotlib = "^3.10.8"
numpy = "^2.4.4"
corner = "^2.2.3"
emcee = "^3.1.6"
scipy = "^1.17.1"
daft = "^0.7.7"
jax = "^0.9.2"


[tool.poetry.group.dev.dependencies]
build = "^1.2.2"
flake8 = "^7.0.0"
pytest = "^8.2.2"

[tool.poetry.group.docs.dependencies]
jupyter = "^1.1.1"
mkdocs-material = "^9.5.34"
mkdocstrings = { version = "^0.26.1", extras = ["python"] }

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"