[tool.poetry]
name = "gpyrn"
version = "1.0.1"
description = "Gaussian process regression networks for exoplanet detection"
authors = ["João Camacho <joao.camacho@astro.up.pt>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "gpyrn" }]

[tool.poetry.dependencies]
python = "^3.12.5"
ipython = "^9.12.0"
matplotlib = "^3.10.8"
numpy = "^2.4.4"
corner = "^2.2.3"
emcee = "^3.1.6"
scipy = "^1.17.1"
daft = "^0.7.7"
jax = "^0.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
httpx = "^0.27.0"
mypy = "^1.10.0"
pydocstyle = "^6.3.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
extra_checks = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"